--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 10
       - run: npm ci
-      - run: npm lint
+      - run: npm run lint
       - run: npm test
 
   publish-npm:
