--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "merge-files-content",
-  "version": "0.0.2",
+  "version": "0.1.2",
   "description": "Node.JS utility function for loading multiple files as one. Useful for project-wide configuration files",
   "main": "index.js",
   "scripts": {
-    "build": "npm run lint && npm test",
     "test": "jest",
     "lint": "eslint .",
-    "preversion": "npm run build"
+    "preversion": "git merge master && npm run lint && npm ci && npm test",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
